2014-01-17  Niels Möller  <nisse@lysator.liu.se>

	* poly1305.h (struct poly1305_ctx): Moved nonce field from here...
	(struct poly1305_aes_ctx): ... to here.
	* poly1305-aes.c (poly1305_aes_set_nonce, poly1305_aes_digest):
	Updated for above.
	* poly1305.c (poly1305_set_nonce): Deleted function.
	* asm.m4: Delete nonce also from the assembly definition of struct
	poly1305_ctx.

2014-01-16  Niels Möller  <nisse@lysator.liu.se>

	* poly1305-aes.c: Include poly1305.c. Rewrite functions without
	using the POLY1305_* macros.

	* Makefile.in (HEADERS): Deleted poly1305-aes.h.

	* poly1305.h (POLY1305_CTX, POLY1305_SET_KEY, POLY1305_SET_NONCE)
	(POLY1305_DIGEST): Deleted macros. Only implemented variant is
	poly1305-aes.
	(POLY1305_DIGEST_SIZE, POLY1305_BLOCK_SIZE, POLY1305_KEY_SIZE):
	New constants.
	(POLY1305_AES_KEY_SIZE, POLY1305_AES_DIGEST_SIZE): Moved here,
	from poly1305-aes.h.
	(struct poly1305_aes_ctx): Likewise.
	(poly1305_aes_set_key, poly1305_aes_set_nonce)
	(poly1305_aes_update, poly1305_aes_digest): Likewise.
	* poly1305-aes.h: Deleted file, declarations moved to poly1305.h.
	Update all users.

	* poly1305-internal.c (s2, s3, s4): Fixed macros.

	* poly1305-aes.h (struct poly1305_aes_ctx): Replace struct aes_ctx
	by struct aes128_ctx.
	* poly1305-aes.c (poly1305_aes_set_key, poly1305_aes_digest):
	Update to use aes128_* functions.
	* poly1305.h (POLY1305_SET_KEY): Drop key size argument when
	calling set_key.

2013-12-19  Niels Möller  <nisse@lysator.liu.se>

	* poly1305-aes.h (poly1305_aes_update): Define as an alias for
	poly1305_update, using preprocessor and a type cast.

	* poly1305-aes.c (poly1305_aes_update): Deleted function.

	* poly1305.h (poly1305_update): Declare.
	(_POLY1305_BLOCK, POLY1305_UPDATE): Deleted macros.

	* poly1305.c (poly1305_update): New function.

2013-11-21  Niels Möller  <nisse@lysator.liu.se>

	* x86_64/poly1305-internal.asm: New file. Almost a factor of two
	speedup.
